[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bag-of-tools"
version = "0.1.0"
description = "Utilities for atomic physics simulations"
authors = [{name = "BagOfTools Maintainers"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["atomic_tools"]
